[package]
authors = ["Duncan <bonsairobo@gmail.com>"]
description = "Bevy camera controllers with buttery, exponential smoothing."
edition = "2021"
keywords = ["bevy", "camera"]
license = "MIT"
name = "smooth-bevy-cameras"
repository = "https://github.com/bonsairobo/smooth-bevy-cameras"
resolver = "2"
version = "0.5.0"

[dependencies]
approx = "0.5"
serde = "1.0.137"

[dependencies.bevy]
version = "0.9"
# git = "https://github.com/bevyengine/bevy"
# branch = "main"
default-features = false
features = ["bevy_render"]

[dev-dependencies.bevy]
version = "0.9"
# git = "https://github.com/bevyengine/bevy"
# branch = "main"
default-features = false
features = ["bevy_core_pipeline", "bevy_pbr", "bevy_winit", "bevy_gltf", "bevy_asset"]

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
version = "0.9"
# git = "https://github.com/bevyengine/bevy"
# branch = "main"
default-features = false
features = ["x11", "wayland"]
